<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roompi_bringup</name>
  <version>0.1.0</version>
  <description>Roompi launch and configuration files.</description>
  <maintainer email="pgold@users.noreply.github.com">pgold</maintainer>
  <license>Unlicense</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joy_linux</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
