<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roompi_teleop</name>
  <version>0.1.0</version>
  <description>RoomPi tele-operation.</description>
  <maintainer email="pgold@users.noreply.github.com">pgold</maintainer>
  <license>Unlicense</license>

  <exec_depend>roompi_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
